# C2RustAgent

./: .gitignore  COMPLETION_REPORT.md  Cargo.toml  DOCKER_GUIDE.md  DOCKER_QUICKREF.md  DOCKER_SUMMARY.md  Dockerfile.translate  README.md  c2rust-agent.toml.example
.github/: copilot-instructions.md
docs/: CLEANUP_REPORT.md  CONFIG_SUMMARY.md  CORE_DESIGN.md  DEEPSEEK_CONFIG_GUIDE.md  DEEPSEEK_DEMO_SUMMARY.md  INDEX.md  P4提示词.md  QUICKSTART_CONFIG.md  README_REWRITE_REPORT.md  USAGE.md  config_integration_completion.md  openai_api_integration.md  openai_integration_completion.md  phase2_2_ast_to_mir.md  phase2_mir.md  phase3_analysis_and_llm.md  phase3_summary.md  phase4_2_completion.md  phase4_2_llm_integration.md  phase4_codegen.md  phase4_completion.md
examples/: codegen_demo.rs  codegen_llm_demo.rs  codegen_with_real_llm.rs  generate_littlefs_rust.rs  llm_external_api_demo.rs  test_deepseek.rs
scripts/: README.md  add_hashmap.sh  add_strings.sh  c_to_rust.py  docker_run.ps1  docker_run.sh  generate_final_report.sh  generate_types.sh  setup_permissions.sh  test_simple_translation.sh  test_translation.sh  translate_chibicc_full.sh  translate_complete.sh  translate_intelligent.sh  translate_single_file.sh  translate_with_python.sh
src/: ast_to_mir.rs  codegen.rs  lib.rs  llm_assists.rs  llm_config.rs  main.rs  mir.rs  project_loader.rs
src/analysis/: mod.rs  (+1 more)
translate_hybrid/: .gitignore  Cargo.toml  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  RUN_SUCCESS_REPORT.md  TRANSLATE_CHIBICC_GUIDE.md  TRANSLATION_IN_PROGRESS.md  monitor_progress.ps1  test_single_file.ps1  translate_chibicc.ps1  translate_chibicc.sh  translate_chibicc_project.ps1
translate_hybrid/config/: hybrid_config.toml.example
translate_hybrid/config/prompts/: fix_syntax.txt  optimize_unsafe.txt  translate.txt
translate_hybrid/src/: lib.rs  llm_client.rs  main.rs  utils.rs
translate_littlefs_fuse/: TRANSLATION_RESULT.md
(+4 files in other folders)
