[package]
name = "C2RustAgent"
version = "0.1.0"
edition = "2024"

[lib]
name = "c2rust_agent"
path = "src/lib.rs"

[[bin]]
name = "C2RustAgent"
path = "src/main.rs"

[dependencies]
clang = "2.0"
clang-sys = "1.8"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
tokio-test = "0.4"
