[package]
name = "translate_hybrid"
version = "0.1.0"
edition = "2024"

[dependencies]
# 依赖主项目的核心库
c2rust_agent = { path = ".." }

# HTTP 客户端和异步运行时
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# JSON 处理
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 配置管理
toml = "0.8"
config = "0.14"

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# 字符编码处理（解决 Windows 乱码）
encoding_rs = "0.8"
console = "0.15"

[dev-dependencies]
tempfile = "3.0"
